--- a/public/stylesheets/css/first_page.css
+++ b/public/stylesheets/css/first_page.css
@@ -96,7 +96,7 @@
  }
 
   .content_first_page .khoi_sp .khoi .khoi_image .hinhsanpham{
-  	width: 91%;
+  	width: 100%;
   	height: 100%;
   	box-shadow: 0 0 5px rgba(4, 4, 4, 0.21);
   }
@@ -643,7 +643,8 @@
   
 .star-rating .fa-star{color: yellow;}
 .rating {
-    margin-right: 20px;
+	margin-right: 20px;
+	margin: auto;
 }
 
 /*category*/
