--- a/views/auth/user/user-profile.ejs
+++ b/views/auth/user/user-profile.ejs
@@ -24,7 +24,7 @@
             <div><a style="color: unset" href="/user/purchase">Quản lý đơn hàng</a></div>
          </div>
          <div class="user-item">
-            <div>Sổ địa chỉ</div>
+            <div><a href="/user/recent">Sản phẩm đã xem</a></div>
          </div>
          <div class="user-item">
             <div>Nhận xét sản phẩm đã mua</div>
