--- a/views/auth/user/user-purchase.ejs
+++ b/views/auth/user/user-purchase.ejs
@@ -28,7 +28,7 @@
         <div><a style="color: unset" href="/user/account/purchase">Quản lý đơn hàng</a></div>
     </div>
     <div class="user-item">
-        <div>Sổ địa chỉ</div>
+        <div><a href="/user/recent">Sản phẩm đã xem</a></div>
     </div>
     <div class="user-item">
         <div>Nhận xét sản phẩm đã mua</div>
