--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -47,16 +47,11 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#exampleNavComponents" aria-expanded="false">
                 <i class="glyphicon glyphicon-align-center"></i>
             </button>
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#">Page 1</a>
-                </li>
-                <li>
-                    <a href="#">Page 2</a>
-                </li>
-            </ul>
         </div>
         <div class="collapse navbar-collapse" id="exampleNavComponents">
+            <div class="navbar-form navbar-right" style="margin-top: 15px;">
+                <a href="/admin/logout"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a> 
+            </div>
           <form action="#" class="navbar-form navbar-right">
               <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search">
