--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -31,7 +31,11 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
 </head>
 <body>
-
+<style>
+    .panel-heading {
+        padding: 0 5px;
+    }
+</style>
 <header>
     <%
         VND = function(num) {
@@ -138,16 +142,11 @@
                                 <span class="fas fa-list text-danger"></span><a href="/admin">&ensp;Danh Sách Sản Phẩm</a>
                             </td>
                         </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="/admin/product/add">&ensp;Thêm Sản Phẩm</a>
-                            </td>
-                        </tr>
                     </table>
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#supplier">
@@ -172,8 +171,8 @@
                     </table>
                 </div>
             </div>
-        </div>
-        <div class="panel panel-default">
+        </div> -->
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#shipping">
@@ -198,8 +197,8 @@
                     </table>
                 </div>
             </div>
-        </div>
-        <div class="panel panel-default">
+        </div> -->
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
@@ -234,7 +233,7 @@
                     </table>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
