--- a/public/stylesheets/css/home.css
+++ b/public/stylesheets/css/home.css
@@ -102,6 +102,7 @@ header .for-user .icon-info .far{
 	left: -60px;
 	width: 175px;
 	padding-bottom: 0;
+	position: absolute;
 }
 .icon-info .dropdown-menu .dropdown-item {
 	width: 172px;
@@ -602,4 +603,12 @@ html[xmlns] .clearfix {
 }
 .custom_select_box {
 	margin-left: auto;
+}
+.act a {
+	color: #48484a;
+	font-weight: 600;
+	font-family: "Roboto Condensed";
+	line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
 }
