--- a/public/stylesheets/css/master.css
+++ b/public/stylesheets/css/master.css
@@ -1,7 +1,7 @@
 *{margin: 0;padding: 0;}
 
 .admin_block{
-  max-width: 13%; 
+  max-width: 16%; 
   background-color: #212120;
   height: 650px;
   overflow-y: scroll;
@@ -10,6 +10,7 @@
 
 .panel-default > .panel-heading{
   background-color: #212120;
+  padding: 0 5px;
 }
 
 .panel-default > .panel-heading:hover{
@@ -37,11 +38,11 @@
     
 
 .panel-heading .panel-title .panel-title-label{
-  padding-left: 12px;
+  padding-left: 5px;
   color: #bcb8b5;
   text-transform: uppercase;
   cursor: pointer;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 30px;
   font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
