--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,12 +17,12 @@
   <!-- DataTables Responsive CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.1.0/material.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.10.19/css/dataTables.material.min.css" rel="stylesheet">
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
-  <!-- <script src="/javascripts/js/buyer/cart.js"></script> -->
 </head>
-<body>
+<body id="sieu-thi-noi-that-suplo" class="template-index">
 
     <header>
         <div class="paragraph-welcome">
