--- a/views/partials/header_seller.ejs
+++ b/views/partials/header_seller.ejs
@@ -13,7 +13,6 @@
 <link rel="stylesheet" href="/stylesheets/css/custom.css">
 
 <!-- Styles -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
@@ -29,6 +28,7 @@
 <script src="/javascripts/js/ejs.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
+
 </head>
 <body>
 
@@ -126,94 +126,6 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#supplier">
-                      <span class="fas fa-parachute-box fa-1x"></span>
-                      <label class="panel-title-label">&ensp;Nhà Cung Cấp</label>
-                    </a>
-                </h4>
-            </div>
-            <div id="supplier" class="panel-collapse collapse" data-parent="#accordion">
-                <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/supplier">&ensp;Nhà Cung Cấp</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="/admin/supplier/add">&ensp;Thêm Nhà Cung Câp</a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#shipping">
-                      <span class="fas fa-parachute-box fa-1x"></span>
-                      <label class="panel-title-label">&ensp;Đối tác vận chuyển</label>
-                    </a>
-                </h4>
-            </div>
-            <div id="shipping" class="panel-collapse collapse" data-parent="#accordion">
-                <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/shipping">&ensp;Danh Sách Đối Tác</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="/admin/shipping/add">&ensp;Thêm Đối Tác</a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
-                      <span class="fas fa-warehouse fa-1x"></span>
-                      <label class="panel-title-label">QUẢN LÝ KHO HÀNG</label>
-                    </a>
-                </h4>
-            </div>
-            <div id="inventory" class="panel-collapse collapse" data-parent="#accordion">
-                <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/inventory">&ensp;Kho Hàng</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/inventory/import">&ensp;Phiếu Nhập Hàng</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="{!! url('admin/inventory/list_export_ballot') !!}">&ensp;Phiếu Xuất Hàng</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="/admin/inventory/add">&ensp;Tạo Phiếu Nhập Hàng</a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#bill">
                       <span class="fas fa-file-invoice-dollar fa-1x"></span>
                       <label class="panel-title-label">&ensp;Quản Lý Đơn hàng</label>
@@ -235,27 +147,6 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#user">
-                      <span class="fas fa-user-tag fa-1x"></span>
-                      <label class="panel-title-label">Hồ sơ người dùng</label>
-                    </a>
-                </h4>
-            </div>
-            <div id="user" class="panel-collapse collapse" data-parent="#accordion">
-                <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <td>
-                                <span class="fas fa-list text-danger"></span><a href="{!! url('admin/user/list') !!}">&ensp;Hồ Sơ Người Dùng</a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#voucher">
                       <span class="fas fa-gift fa-1x"></span>
                       <label class="panel-title-label">&ensp;Khuyến mãi</label>
@@ -267,12 +158,12 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="{!! url('admin/voucher/list') !!}">&ensp;Danh Sách Khuyến Mãi</a>
+                                <span class="fas fa-list text-danger"></span><a href="">&ensp;Danh Sách Khuyến Mãi</a>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="{!! url('admin/voucher/add') !!}">&ensp;Thêm Khuyến Mãi</a>
+                                <span class="fas fa-pencil-alt text-success"></span><a href="">&ensp;Thêm Khuyến Mãi</a>
                             </td>
                         </tr>
                     </table>
@@ -310,7 +201,7 @@
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#contact">
                       <span class="fas fa-envelope-open-text fa-1x"></span>
-                      <label class="panel-title-label">&ensp;Contact</label>
+                      <label class="panel-title-label">&ensp;Thiết lập</label>
                     </a>
                 </h4>
             </div>
@@ -320,6 +211,11 @@
                         <tr>
                             <td>
                                 <a href="#">Change Password</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="/seller/profile/address-book">Địa chỉ giao hàng</a>
                             </td>
                         </tr>
                     </table>
